--- a/pages/clases/1.md
+++ b/pages/clases/1.md
@@ -50,9 +50,49 @@ Se trabajará con el libro HSK 1.
 - 对不起 duìbùqǐ (v.): perdón
 - 没关系 méiguānxì: no hay problema
 
-## Sonidos
+## Fonética
 
-Vimos los siguientes [sonidos](../recursos/sonidos.md).
+### Sílabas
+
+Las sílabas se componen de:
+ - un sonido inicial (opcional)
+ - un sonido final
+ - un tono
+ 
+Cada caracter se corresponde con una única sílaba.
+
+!!! note "Nota"
+    Cuando "i" o "ü" actúan como una sílaba completa se antepone "y". Y en el caso de "ü" se omite "¨".
+    </p>
+    Cuando "u" actúa como una sílaba completa se antepone "w".
+    </p>
+    <center>i-> yi
+    </p>
+    ü -> yu
+    </p>
+    u -> wu</center>
+
+### Tonos
+
+Vimos los cuatro tonos:
+
+1. alto y sostenido
+- ascendente
+- bajo y luego sube
+- descendente y fuerte
+- neutro
+
+<center>
+
+| 1 | 2 | 3 | 4 |   |
+|---|---|---|---|---|
+| mā | má | mǎ | mà | ma  |
+
+</center>
+
+### Sonidos
+
+Practicamos las siguientes [combinaciones de iniciales y finales](../recursos/sonidos.md) con los 4 tonos:
 
 <center>
 
