--- a/pages/clases/1.md
+++ b/pages/clases/1.md
@@ -2,6 +2,8 @@
 
 Se trabajará con el libro HSK 1.
 
+La transcripcion de caracteres chinos al alfabeto latino se llama Pīnyīn.
+
 ## Conversación - Texto (1.1)
 
 ### 01-1
@@ -55,22 +57,12 @@ Se trabajará con el libro HSK 1.
 ### Sílabas
 
 Las sílabas se componen de:
+
  - un sonido inicial (opcional)
  - un sonido final
  - un tono
  
 Cada caracter se corresponde con una única sílaba.
-
-!!! note "Nota"
-    Cuando "i" o "ü" actúan como una sílaba completa se antepone "y". Y en el caso de "ü" se omite "¨".
-    </p>
-    Cuando "u" actúa como una sílaba completa se antepone "w".
-    </p>
-    <center>i-> yi
-    </p>
-    ü -> yu
-    </p>
-    u -> wu</center>
 
 ### Tonos
 
@@ -104,3 +96,7 @@ Practicamos las siguientes [combinaciones de iniciales y finales](../recursos/so
 |  f  | fa  | fo  |     |     | fu  |     |
 
 </center>
+
+## Tarea
+
+ - Grabar los todos sonidos aprendidos con los 4 tonos.
