--- a/pages/clases/1.md
+++ b/pages/clases/1.md
@@ -8,6 +8,7 @@ La transcripcion de caracteres chinos al alfabeto latino se llama Pīnyīn.
 
 ### 01-1
 
+<img src="/imgs/001-01.png" alt="Saludo entre dos personas.">
 
 ??? note "A: 你好! "
     Nǐ hǎo!
@@ -24,6 +25,8 @@ La transcripcion de caracteres chinos al alfabeto latino se llama Pīnyīn.
 
 ### 01-2
 
+<img src="/imgs/001-02.png" alt="Saludo entre dos personas y una personas de mayor rango.">
+
 ??? note "A: 您好!"
     Nín hǎo
     Hola! (formal)
@@ -39,6 +42,8 @@ La transcripcion de caracteres chinos al alfabeto latino se llama Pīnyīn.
 
 ### 01-3
 
+<img src="/imgs/001-03.png" alt="Una niña tapándose la boca.">
+
 ??? note "A: 对不起。"
     Duìbùqǐ.
     Perdón.
@@ -49,7 +54,7 @@ La transcripcion de caracteres chinos al alfabeto latino se llama Pīnyīn.
 
 #### Palabras nuevas
 
-- 对不起 duìbùqǐ (v.): perdón
+- 对不起 duìbuqǐ (v.): perdón
 - 没关系 méiguānxì: no hay problema
 
 ## Fonética
