--- a/pages/clases/3.md
+++ b/pages/clases/3.md
@@ -51,4 +51,28 @@ Hicimos el ejercicio 1-3.
 
 ## Tarea
 
- - Mandar audio con los sonidos del [cuadro 2](#cuadro-2) de fonética
+ - Mandar audio con las siguientes palabas:
+
+    - jī jí
+    - jiē qià
+    - xì jiū
+    - jīqì
+    - jí qí
+    - qī xiàn
+    - xiāo xi     
+    - xiǎo xīn
+    - qiān qiú
+    - qiú jiù
+    - xīn qǐ
+    - qīng qì
+    - jiān xīn
+    - jiāo jì
+    - jīng jì
+    - qīngqì
+    - xíng qí
+    - qiè xǐ
+    - qiǎo qǔ
+    - jù jí
+    - qū xī
+    - qì jǐ
+    - qiè jì 
